@@ -434,14 +434,22 @@ class TintWizardGUI(gtk.Window):
 		self.panelMenu.connect("toggled", self.changeOccurred)
 		self.tablePanel.attach(self.panelMenu, 1, 2, 6, 7, xoptions=gtk.EXPAND)
 		
-		temp = gtk.Label("Panel Monitor (all, 1, 2...)")
+		temp = gtk.Label("Place In Window Manager Dock")
 		temp.set_alignment(0, 0.5)
 		self.tablePanel.attach(temp, 0, 1, 7, 8, xpadding=10)
+		self.panelDock = gtk.CheckButton()
+		self.panelDock.set_active(False)
+		self.panelDock.connect("toggled", self.changeOccurred)
+		self.tablePanel.attach(self.panelDock, 1, 2, 7, 8, xoptions=gtk.EXPAND)
+		
+		temp = gtk.Label("Panel Monitor (all, 1, 2...)")
+		temp.set_alignment(0, 0.5)
+		self.tablePanel.attach(temp, 0, 1, 8, 9, xpadding=10)
 		self.panelMonitor = gtk.Entry(6)
 		self.panelMonitor.set_width_chars(8)
 		self.panelMonitor.set_text(PANEL_MONITOR)
 		self.panelMonitor.connect("changed", self.changeOccurred)
-		self.tablePanel.attach(self.panelMonitor, 1, 2, 7, 8, xoptions=gtk.EXPAND)
+		self.tablePanel.attach(self.panelMonitor, 1, 2, 8, 9, xoptions=gtk.EXPAND)
 		
 		# Taskbar
 		self.tableTaskbar = gtk.Table(rows=4, columns=3, homogeneous=False)
@@ -775,119 +783,131 @@ class TintWizardGUI(gtk.Window):
 		self.tableTray.attach(self.trayBg, 1, 2, 4, 5, xoptions=gtk.EXPAND, yoptions=gtk.EXPAND)
 		
 		# Clock Options
-		self.tableClock = gtk.Table(rows=3, columns=3, homogeneous=False)
-		self.tableClock.set_row_spacings(5)
-		self.tableClock.set_col_spacings(5)
+		self.tableClockDisplays = gtk.Table(rows=3, columns=3, homogeneous=False)
+		self.tableClockDisplays.set_row_spacings(5)
+		self.tableClockDisplays.set_col_spacings(5)
 		
 		temp = gtk.Label("Show Clock")
 		temp.set_alignment(0, 0.5)
-		self.tableClock.attach(temp, 0, 1, 0, 1, xpadding=10)
+		self.tableClockDisplays.attach(temp, 0, 1, 0, 1, xpadding=10)
 		self.clockCheckButton = gtk.CheckButton()
 		self.clockCheckButton.set_active(True)
 		self.clockCheckButton.connect("toggled", self.changeOccurred)
-		self.tableClock.attach(self.clockCheckButton, 1, 2, 0, 1, xoptions=gtk.EXPAND)
+		self.tableClockDisplays.attach(self.clockCheckButton, 1, 2, 0, 1, xoptions=gtk.EXPAND)
 		
 		temp = gtk.Label("Time 1 Format")
 		temp.set_alignment(0, 0.5)
-		self.tableClock.attach(temp, 0, 1, 1, 2, xpadding=10)
+		self.tableClockDisplays.attach(temp, 0, 1, 1, 2, xpadding=10)
 		self.clock1Format = gtk.Entry(50)
 		self.clock1Format.set_width_chars(20)
 		self.clock1Format.set_text(CLOCK_FMT_1)
 		self.clock1Format.connect("changed", self.changeOccurred)
-		self.tableClock.attach(self.clock1Format, 1, 2, 1, 2, xoptions=gtk.EXPAND)
+		self.tableClockDisplays.attach(self.clock1Format, 1, 2, 1, 2, xoptions=gtk.EXPAND)
 		self.clock1CheckButton = gtk.CheckButton("Show")
 		self.clock1CheckButton.set_active(True)
 		self.clock1CheckButton.connect("toggled", self.changeOccurred)
-		self.tableClock.attach(self.clock1CheckButton, 2, 3, 1, 2, xoptions=gtk.EXPAND)
+		self.tableClockDisplays.attach(self.clock1CheckButton, 2, 3, 1, 2, xoptions=gtk.EXPAND)
 		
 		temp = gtk.Label("Time 1 Font")
 		temp.set_alignment(0, 0.5)
-		self.tableClock.attach(temp, 0, 1, 2, 3, xpadding=10)
+		self.tableClockDisplays.attach(temp, 0, 1, 2, 3, xpadding=10)
 		self.clock1FontButton = gtk.FontButton()
 		self.clock1FontButton.set_font_name(self.defaults["font"])
 		self.clock1FontButton.connect("font-set", self.changeOccurred)
-		self.tableClock.attach(self.clock1FontButton, 1, 2, 2, 3, xoptions=gtk.EXPAND, yoptions=gtk.EXPAND)
+		self.tableClockDisplays.attach(self.clock1FontButton, 1, 2, 2, 3, xoptions=gtk.EXPAND, yoptions=gtk.EXPAND)
 		
 		temp = gtk.Label("Time 2 Format")
 		temp.set_alignment(0, 0.5)
-		self.tableClock.attach(temp, 0, 1, 3, 4, xpadding=10)
+		self.tableClockDisplays.attach(temp, 0, 1, 3, 4, xpadding=10)
 		self.clock2Format = gtk.Entry(50)
 		self.clock2Format.set_width_chars(20)
 		self.clock2Format.set_text(CLOCK_FMT_2)
 		self.clock2Format.connect("changed", self.changeOccurred)
-		self.tableClock.attach(self.clock2Format, 1, 2, 3, 4, xoptions=gtk.EXPAND)
+		self.tableClockDisplays.attach(self.clock2Format, 1, 2, 3, 4, xoptions=gtk.EXPAND)
 		self.clock2CheckButton = gtk.CheckButton("Show")
 		self.clock2CheckButton.set_active(True)
 		self.clock2CheckButton.connect("toggled", self.changeOccurred)
-		self.tableClock.attach(self.clock2CheckButton, 2, 3, 3, 4, xoptions=gtk.EXPAND)
+		self.tableClockDisplays.attach(self.clock2CheckButton, 2, 3, 3, 4, xoptions=gtk.EXPAND)
 		
 		temp = gtk.Label("Time 2 Font")
 		temp.set_alignment(0, 0.5)
-		self.tableClock.attach(temp, 0, 1, 4, 5, xpadding=10)
+		self.tableClockDisplays.attach(temp, 0, 1, 4, 5, xpadding=10)
 		self.clock2FontButton = gtk.FontButton()
 		self.clock2FontButton.set_font_name(self.defaults["font"])
 		self.clock2FontButton.connect("font-set", self.changeOccurred)
-		self.tableClock.attach(self.clock2FontButton, 1, 2, 4, 5, xoptions=gtk.EXPAND, yoptions=gtk.EXPAND)
+		self.tableClockDisplays.attach(self.clock2FontButton, 1, 2, 4, 5, xoptions=gtk.EXPAND, yoptions=gtk.EXPAND)
+		
+		self.clockArea = gtk.ScrolledWindow()
+		self.clockBuf = gtk.TextBuffer()
+		self.clockTextView = gtk.TextView(self.clockBuf)
+		self.clockBuf.insert_at_cursor("%H 00-23 (24-hour)    %I 01-12 (12-hour)    %l 1-12 (12-hour)    %M 00-59 (minutes)\n%S 00-59 (seconds)    %P am/pm    %b Jan-Dec    %B January-December\n%a Sun-Sat    %A Sunday-Saturday    %d 01-31 (day)    %e 1-31 (day)\n%y 2 digit year, e.g. 09    %Y 4 digit year, e.g. 2009")
+		self.clockTextView.set_editable(False)
+		self.clockArea.add_with_viewport(self.clockTextView)
+		self.tableClockDisplays.attach(self.clockArea, 0, 3, 5, 6, xpadding=10)
+		
+		self.tableClockSettings = gtk.Table(rows=3, columns=3, homogeneous=False)
+		self.tableClockSettings.set_row_spacings(5)
+		self.tableClockSettings.set_col_spacings(5)
 		
 		temp = gtk.Label("Clock Font Color")
 		temp.set_alignment(0, 0.5)
-		self.tableClock.attach(temp, 0, 1, 5, 6, xpadding=10)
+		self.tableClockSettings.attach(temp, 0, 1, 0, 1, xpadding=10)
 		self.clockFontCol = gtk.Entry(7)
 		self.clockFontCol.set_width_chars(9)
 		self.clockFontCol.set_name("clockFontCol")
 		self.clockFontCol.connect("activate", self.colorTyped)
-		self.tableClock.attach(self.clockFontCol, 1, 2, 5, 6, xoptions=gtk.EXPAND)
+		self.tableClockSettings.attach(self.clockFontCol, 1, 2, 0, 1, xoptions=gtk.EXPAND)
 		self.clockFontColButton = gtk.ColorButton(gtk.gdk.color_parse(self.defaults["fgColor"]))
 		self.clockFontColButton.set_use_alpha(True)
 		self.clockFontColButton.set_name("clockFontCol")
 		self.clockFontColButton.connect("color-set", self.colorChange)
-		self.tableClock.attach(self.clockFontColButton, 2, 3, 5, 6, xoptions=gtk.EXPAND, yoptions=gtk.EXPAND)
+		self.tableClockSettings.attach(self.clockFontColButton, 2, 3, 0, 1, xoptions=gtk.EXPAND, yoptions=gtk.EXPAND)
 		self.clockFontCol.set_text(self.defaults["fgColor"])
 		# Add this AFTER we set color to avoid "changed" event
 		self.clockFontCol.connect("changed", self.changeOccurred)
 		
 		temp = gtk.Label("Padding (x, y)")
 		temp.set_alignment(0, 0.5)
-		self.tableClock.attach(temp, 0, 1, 6, 7, xpadding=10)
+		self.tableClockSettings.attach(temp, 0, 1, 1, 2, xpadding=10)
 		self.clockPadX = gtk.Entry(6)
 		self.clockPadX.set_width_chars(8)
 		self.clockPadX.set_text(CLOCK_PADDING_X)
 		self.clockPadX.connect("changed", self.changeOccurred)
-		self.tableClock.attach(self.clockPadX, 1, 2, 6, 7, xoptions=gtk.EXPAND)
+		self.tableClockSettings.attach(self.clockPadX, 1, 2, 1, 2, xoptions=gtk.EXPAND)
 		self.clockPadY = gtk.Entry(6)
 		self.clockPadY.set_width_chars(8)
 		self.clockPadY.set_text(CLOCK_PADDING_Y)
 		self.clockPadY.connect("changed", self.changeOccurred)
-		self.tableClock.attach(self.clockPadY, 2, 3, 6, 7, xoptions=gtk.EXPAND)
+		self.tableClockSettings.attach(self.clockPadY, 2, 3, 1, 2, xoptions=gtk.EXPAND)
 		
 		temp = gtk.Label("Clock Background ID")
 		temp.set_alignment(0, 0.5)
-		self.tableClock.attach(temp, 0, 1, 7, 8, xpadding=10)
+		self.tableClockSettings.attach(temp, 0, 1, 2, 3, xpadding=10)
 		self.clockBg = gtk.combo_box_new_text()
 		self.clockBg.append_text("0 (fully transparent)")
 		for i in range(len(self.bgs)):
 			self.clockBg.append_text(str(i+1))
 		self.clockBg.set_active(0)
 		self.clockBg.connect("changed", self.changeOccurred)
-		self.tableClock.attach(self.clockBg, 1, 2, 7, 8, xoptions=gtk.EXPAND, yoptions=gtk.EXPAND)
+		self.tableClockSettings.attach(self.clockBg, 1, 2, 2, 3, xoptions=gtk.EXPAND, yoptions=gtk.EXPAND)
 		
 		temp = gtk.Label("Left Click Command")
 		temp.set_alignment(0, 0.5)
-		self.tableClock.attach(temp, 0, 1, 8, 9, xpadding=10)
+		self.tableClockSettings.attach(temp, 0, 1, 3, 4, xpadding=10)
 		self.clockLClick = gtk.Entry(50)
 		self.clockLClick.set_width_chars(20)
 		self.clockLClick.set_text(CLOCK_LCLICK)
 		self.clockLClick.connect("changed", self.changeOccurred)
-		self.tableClock.attach(self.clockLClick, 1, 2, 8, 9, xoptions=gtk.EXPAND)
+		self.tableClockSettings.attach(self.clockLClick, 1, 2, 3, 4, xoptions=gtk.EXPAND)
 		
 		temp = gtk.Label("Right Click Command")
 		temp.set_alignment(0, 0.5)
-		self.tableClock.attach(temp, 0, 1, 9, 10, xpadding=10)
+		self.tableClockSettings.attach(temp, 0, 1, 4, 5, xpadding=10)
 		self.clockRClick = gtk.Entry(50)
 		self.clockRClick.set_width_chars(20)
 		self.clockRClick.set_text(CLOCK_RCLICK)
 		self.clockRClick.connect("changed", self.changeOccurred)
-		self.tableClock.attach(self.clockRClick, 1, 2, 9, 10, xoptions=gtk.EXPAND)
+		self.tableClockSettings.attach(self.clockRClick, 1, 2, 4, 5, xoptions=gtk.EXPAND)
 		
 		# Mouse Options
 		self.tableMouse = gtk.Table(rows=4, columns=3, homogeneous=False)
@@ -1072,16 +1092,20 @@ class TintWizardGUI(gtk.Window):
 		self.taskNotebook.append_page(self.tableIcon, gtk.Label("Task Icons"))
 		self.taskNotebook.append_page(self.tableFont, gtk.Label("Task Fonts"))
 		
+		self.clockNotebook = gtk.Notebook()
+		self.clockNotebook.set_tab_pos(gtk.POS_TOP)
+		self.clockNotebook.set_current_page(0)
+		
+		self.clockNotebook.append_page(self.tableClockDisplays, gtk.Label("Clock Display"))
+		self.clockNotebook.append_page(self.tableClockSettings, gtk.Label("Clock Settings"))
+		
 		# Add pages to notebook
 		self.notebook.append_page(self.tableBgs, gtk.Label("Backgrounds"))
 		self.notebook.append_page(self.tablePanel, gtk.Label("Panel"))
 		self.notebook.append_page(self.tableTaskbar, gtk.Label("Taskbar"))
-		#self.notebook.append_page(self.tableTask, gtk.Label("Tasks"))
-		#self.notebook.append_page(self.tableIcon, gtk.Label("Task Icons"))
-		#self.notebook.append_page(self.tableFont, gtk.Label("Task Fonts"))
 		self.notebook.append_page(self.taskNotebook, gtk.Label("Tasks"))
 		self.notebook.append_page(self.tableTray, gtk.Label("Systray"))
-		self.notebook.append_page(self.tableClock, gtk.Label("Clock"))
+		self.notebook.append_page(self.clockNotebook, gtk.Label("Clock"))
 		self.notebook.append_page(self.tableMouse, gtk.Label("Mouse"))
 		self.notebook.append_page(self.tableBattery, gtk.Label("Battery"))
 		self.notebook.append_page(self.configArea, gtk.Label("View Config"))
@@ -1109,6 +1133,7 @@ class TintWizardGUI(gtk.Window):
 			"panel_margin": (self.panelMarginX, self.panelMarginY),
 			"panel_padding": (self.panelPadX, self.panelPadY),
 			"wm_menu": self.panelMenu,
+			"panel_dock": self.panelDock,
 			"panel_background_id": self.panelBg,
 			"taskbar_mode": self.taskbarMode,
 			"taskbar_padding": (self.taskbarPadX, self.taskbarPadY, self.taskbarSpacing),
@@ -1439,6 +1464,7 @@ class TintWizardGUI(gtk.Window):
 															self.panelMarginY.get_text() if self.panelMarginY.get_text() else PANEL_MARGIN_Y))
 		self.configBuf.insert(self.configBuf.get_end_iter(), "panel_padding = %s %s\n" % (self.panelPadX.get_text() if self.panelPadX.get_text() else PANEL_PADDING_X,
 															self.panelPadY.get_text() if self.panelPadY.get_text() else PANEL_PADDING_Y))
+		self.configBuf.insert(self.configBuf.get_end_iter(), "panel_dock = %s\n" % int(self.panelDock.get_active()))
 		self.configBuf.insert(self.configBuf.get_end_iter(), "wm_menu = %s\n" % int(self.panelMenu.get_active()))
 		self.configBuf.insert(self.configBuf.get_end_iter(), "panel_background_id = %s\n" % (self.panelBg.get_active()))
 		
@@ -1632,6 +1658,7 @@ class TintWizardGUI(gtk.Window):
 		self.panelPadY.set_text(PANEL_PADDING_Y)
 		self.panelBg.set_active(0)
 		self.panelMenu.set_active(0)
+		self.panelDock.set_active(0)
 		self.panelMonitor.set_text(PANEL_MONITOR)
 		# Taskbar
 		self.taskbarMode.set_active(0)
